--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333333">
+    android:backgroundTint="#FF5722">
 
     <TextView
-        android:id="@+id/welcome"
+        android:id="@+id/txtngoma"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/welcome_to"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/ngoma"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/welcome"
         android:layout_centerVertical="true"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="300dp"
         android:layout_marginBottom="300dp"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="@string/ngoma_student_app"
-        android:textColor="@color/white"
+        android:text="Ngoma Students App"
+        android:textColor="@color/blue"
         android:textSize="34sp" />
 
     <Button
-        android:layout_width="381dp"
+        android:id="@+id/btnstart"
+        android:layout_width="300dp"
         android:layout_height="64dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="100dp"
+        android:background="@color/red"
         android:onClick="start"
         android:text="@string/start"
-        android:textSize="24sp" />
+        android:textSize="34sp" />
+
+    <ImageView
+        android:id="@+id/imglogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="100dp"
+        app:srcCompat="@drawable/logo" />
 </RelativeLayout>
