--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:textAlignment="center"
+    android:textAlignment="viewStart"
     android:textSize="16sp">
 
 </TextView>
