--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources><color name="red" >#FF0000
-</color>
-<color name="green" >#FF00FF00
-</color>
-<color name="blue" >#FF0000FF
-</color>
-<color name="yellow" >#FFFFAA00
-</color>
+<resources>
+    <color name="red">#FF0000</color>
+    <color name="green">#FF00FF00</color>
+    <color name="blue">#FF0000FF</color>
+    <color name="yellow">#FFFFAA00</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#9C27B0</color>
 </resources>
