--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/premium"
-        android:title="Premium" />
+        android:title="@string/premium" />
     <item
         android:id="@+id/login"
-        android:title="Login" />
+        android:title="@string/login" />
     <item
         android:id="@+id/about"
-        android:title="About" />
+        android:title="@string/about" />
 </menu>
