--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:icon="@android:drawable/ic_media_previous"
         android:title="Previous" />
     <item
         android:icon="@android:drawable/ic_menu_info_details"
-        android:title="Details" />
+        android:title="@string/details" />
     <item
         android:icon="@android:drawable/ic_media_next"
         android:title="Next" />
